# 3TEduTech

./: .gitignore  docker-compose.yml
.github/workflows/: deploy.yml
3t-edu-tech-backend/: Dockerfile  server.js
3t-edu-tech-backend/src/: app.js
3t-edu-tech-backend/src/database/: connection.js
3t-edu-tech-backend/src/jobs/: progressReminderJob.js
3t-edu-tech-backend/src/utils/: video.util.js  vnpay.util.js
ai-service/: .env.example  .gitignore  Dockerfile  pyproject.toml  run.py
ai-service/src/: config.py  main.py
ai-service/src/api/routes/: __init__.py  chat.py  ingest.py  search.py
ai-service/src/core/: embeddings.py  gemini.py
ai-service/src/models/: schemas.py
ai-service/src/rag/: chain.py  loader.py  prompts.py
ai-service/src/vectorstore/: __init__.py  chroma.py
edu-ai-learning-hub/: .eslintrc.json  .prettierrc.json  Dockerfile  localhost.crt  localhost.key  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
edu-ai-learning-hub/src/: App.css  App.tsx  i18n.ts  index.css  main.tsx  router.tsx
edu-ai-learning-hub/src/contexts/: AuthContext.tsx  CartContext.tsx  SettingsContext.tsx
edu-ai-learning-hub/src/hooks/: useAdminCourseFilters.ts  useChatbot.ts  useCopyToClipboard.ts  useCourseFilters.ts  useCourseNavigation.ts  useScrollToTop.tsx
edu-ai-learning-hub/src/pages/: AboutPage.tsx  AllInstructorsPage.tsx  AvatarTestPage.tsx  Cart.tsx  Categories.tsx  CategoryDetailPage.tsx  Certificates.tsx  Checkout.tsx  CheckoutReturn.tsx  CourseDetail.tsx  CourseLearningPage.tsx  CourseSectionDetail.tsx  (+11 more)
(+248 files in other folders)
